--- a/src/program/resources/fxml/Compte.fxml
+++ b/src/program/resources/fxml/Compte.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -49,7 +49,7 @@
          <children>
             <VBox alignment="CENTER">
                <children>
-                  <Hyperlink text="Modifier mon adresse mail" textAlignment="CENTER">
+                  <Hyperlink fx:id="modifier_email" text="Modifier mon adresse mail" textAlignment="CENTER">
                      <font>
                         <Font size="20.0" />
                      </font></Hyperlink>
