--- a/src/program/resources/fxml/New_mail.fxml
+++ b/src/program/resources/fxml/New_mail.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -12,19 +13,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <ToolBar prefHeight="40.0" prefWidth="200.0">
-              <items>
-                  <Button id="New_mail_Stats" fx:id="New_mail_Accueil" mnemonicParsing="false" text="Accueil" />
-                <Button id="New_mail_Stats" fx:id="New_mail_Stats" mnemonicParsing="false" text="Stats" />
-                  <Button id="New_mail_Panier" fx:id="New_mail_Panier" mnemonicParsing="false" text="Mes Listes" />
-                  <Button id="New_mail_Alertes" fx:id="New_mail_Alertes" mnemonicParsing="false" text="Alertes" />
-                  <Button id="New_mail_Mon_Compte" fx:id="New_mail_Mon_Compte" mnemonicParsing="false" text="Mon Compte" />
-              </items>
-            </ToolBar>
             <HBox alignment="CENTER" prefHeight="167.0" prefWidth="724.0">
                <children>
                   <ImageView fitHeight="174.0" fitWidth="288.0" pickOnBounds="true" preserveRatio="true">
@@ -43,9 +35,6 @@
    <right>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
    </right>
-   <bottom>
-      <VBox prefHeight="68.0" prefWidth="724.0" BorderPane.alignment="CENTER" />
-   </bottom>
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
@@ -56,8 +45,22 @@
                         <Font size="20.0" />
                      </font>
                   </Text>
-                  <TextField id="New_mail_new_email" fx:id="New_mail_new_email" />
-                  <Button id="New_mail_valider" fx:id="New_mail_valider" mnemonicParsing="false" text="Valider" translateY="10.0" />
+                  <TextField id="New_mail_new_email" fx:id="New_mail_new_email">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin></TextField>
+                  <Label fx:id="emptyFields" text="Erreur Label">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Button id="New_mail_valider" fx:id="New_mail_valider" mnemonicParsing="false" text="Valider" translateY="10.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Button>
                   <Hyperlink id="New_mail_retour" fx:id="New_mail_retour" text="Retour" textAlignment="CENTER" translateY="35.0">
                      <font>
                         <Font size="20.0" />
