--- a/src/program/resources/fxml/New_mail.fxml
+++ b/src/program/resources/fxml/New_mail.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -45,7 +45,7 @@
                         <Font size="20.0" />
                      </font>
                   </Text>
-                  <TextField id="New_mail_new_email" fx:id="New_mail_new_email">
+                  <TextField id="New_mail_new_email" fx:id="New_mail_new_email" promptText="something@gmail.com">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin></TextField>
