--- a/src/program/resources/fxml/ConsulterList.fxml
+++ b/src/program/resources/fxml/ConsulterList.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,19 +14,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="consulterListe" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <StackPane prefHeight="31.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Consulter Liste 2" />
-         </children>
-      </StackPane>
+      <StackPane prefHeight="31.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
    </top>
    <left>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Hyperlink text=" &lt; Retour " />
+            <Hyperlink id="retour" fx:id="retour" text=" &lt; Retour " />
          </children>
       </VBox>
    </left>
@@ -37,13 +32,13 @@
                <children>
                   <ImageView fitHeight="129.0" fitWidth="376.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@FoodJET.png" />
+                        <Image url="/program/resources/images/FoodJET.png" />
                      </image>
                   </ImageView>
                </children>
             </HBox>
             <Label prefHeight="17.0" prefWidth="490.0" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total:   Moins de 200€" textAlignment="CENTER" wrappingWidth="374.2060546875">
+            <Text id="totalListe" fx:id="totalListe" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:  %nombre%€" textAlignment="CENTER" wrappingWidth="374.2060546875">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -52,7 +47,7 @@
                </font>
             </Text>
             <Label />
-            <TextArea prefHeight="125.0" prefWidth="350.0" text="Légumes : 25 €&#10;Fruits : 30 €&#10;Viandes : 30 €&#10;Produits laitiers : 20€&#10;Boulangerie : 15 €&#10;Boissons : 40 €&#10;&#10;" />
+            <ListView id="detailListe" fx:id="detailListe" prefHeight="200.0" prefWidth="200.0" />
          </children>
       </VBox>
    </center>
