--- a/src/program/resources/fxml/CreerListe-Popup.fxml
+++ b/src/program/resources/fxml/CreerListe-Popup.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="creerListe" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="creerListe" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <VBox fx:id="leftVbox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
    </left>
@@ -28,6 +29,7 @@
                </children>
             </HBox>
             <TextField fx:id="listField" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" />
+            <Label fx:id="Echec" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="-Infinity" text="Echec" />
             <HBox fx:id="buttonsHbox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="83.0" prefWidth="200.0">
                <children>
                   <GridPane fx:id="buttonsPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="83.0" prefWidth="414.0">
@@ -39,12 +41,12 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button fx:id="valider" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Valider" GridPane.halignment="CENTER">
+                        <Button fx:id="New_List_valider" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Valider" GridPane.halignment="CENTER">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Button>
-                        <Button fx:id="annuler" mnemonicParsing="false" text="Annuler" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                        <Button fx:id="New_List_annuler" mnemonicParsing="false" text="Annuler" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                            <font>
                               <Font size="18.0" />
                            </font>
