--- a/src/program/resources/fxml/MesPaniers.fxml
+++ b/src/program/resources/fxml/MesPaniers.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="mesPaniers" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="mesPaniers" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox fx:id="header" BorderPane.alignment="CENTER">
          <children>
@@ -38,12 +38,13 @@
    <center>
       <VBox fx:id="panierButtons" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="consulterListe" mnemonicParsing="false" prefHeight="48.0" prefWidth="224.0" text="Consulter une Liste" textAlignment="CENTER">
+            <HBox prefHeight="100.0" prefWidth="200.0" />
+            <Button fx:id="consulterListe" minWidth="-Infinity" mnemonicParsing="false" prefHeight="48.0" prefWidth="250.0" text="Consulter mes Listes" textAlignment="CENTER">
                <font>
                   <Font size="22.0" />
                </font>
             </Button>
-            <Button fx:id="creerListe" mnemonicParsing="false" prefHeight="48.0" prefWidth="224.0" text="Créer une Liste" textAlignment="CENTER">
+            <Button fx:id="creerListe" minWidth="-Infinity" mnemonicParsing="false" prefHeight="48.0" prefWidth="250.0" text="Créer une Liste" textAlignment="CENTER">
                <font>
                   <Font size="22.0" />
                </font>
