--- a/src/program/resources/fxml/New_MDP.fxml
+++ b/src/program/resources/fxml/New_MDP.fxml
@@ -3,27 +3,20 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <ToolBar>
-              <items>
-                  <Button id="Mon_Compte_Stats" fx:id="Mon_Compte_Accueil" mnemonicParsing="false" text="Accueil" />
-                <Button fx:id="Mon_Compte_Stats" mnemonicParsing="false" text="Stats" />
-                  <Button fx:id="Mon_Compte_Panier" mnemonicParsing="false" text="Mes Listes" />
-                  <Button fx:id="Mon_Compte_Alertes" mnemonicParsing="false" text="Alertes" />
-                  <Button fx:id="Mon_Compte_Mon_Compte" defaultButton="true" mnemonicParsing="false" text="Mon Compte" />
-              </items>
-            </ToolBar>
             <HBox alignment="CENTER" prefHeight="167.0" prefWidth="724.0">
                <children>
                   <ImageView fitHeight="174.0" fitWidth="288.0" pickOnBounds="true" preserveRatio="true">
@@ -43,28 +36,37 @@
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
    </right>
    <center>
-      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
             <VBox alignment="CENTER">
                <children>
-                  <Hyperlink fx:id="modifier_email" text="Modifier mon adresse mail" textAlignment="CENTER">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nouveau mot de passe" textAlignment="CENTER">
                      <font>
                         <Font size="20.0" />
-                     </font></Hyperlink>
-                  <Hyperlink fx:id="modifier_mdp" text="Modifier mon mot de passe" textAlignment="CENTER">
+                     </font>
+                  </Text>
+                  <PasswordField fx:id="New_mdp_new_mdp" promptText="nouveau mot de passe" />
+                  <Label fx:id="emptyFields" text="Erreur Label">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Button id="New_mail_valider" fx:id="New_mdp_valider" mnemonicParsing="false" text="Valider" translateY="10.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Hyperlink id="New_mail_retour" fx:id="New_mdp_retour" text="Retour" textAlignment="CENTER" translateY="35.0">
                      <font>
                         <Font size="20.0" />
-                     </font></Hyperlink>
+                     </font>
+                  </Hyperlink>
                </children>
             </VBox>
-            <Button fx:id="deconnect" mnemonicParsing="false" text="Déconnexion" translateY="20.0">
-               <font>
-                  <Font size="18.0" />
-               </font></Button>
          </children>
-         <BorderPane.margin>
-            <Insets top="50.0" />
-         </BorderPane.margin>
       </VBox>
    </center>
 </BorderPane>
